<resources>
    <string name="app_name">Newzz</string>
    <string name="title_activity_list_news">ListNews</string>
    <string name="signout">LogOut</string>
    <string name="lorem">Newzz provides news from the leading news channels all around the world.\nNewzz provides all the relevant informations in a precise manner.\nNewzz provide data on basis of country,categories,trending.\n\n

Categores include:\n\n
*business\n
*general\n
*health\n
*science\n
*sports\n
*technology\n
*entertainment\n\n


Newzz FEATURES\n\n
*Opt categories u r interested in\n
*Filter on basis of categories\n
*get notified on Breaking News\n
*photos of events, celebrities and \n happenings from around the world\n
*Share news over social media\n
*Read news offline\n
*Customized profile\n
*Search articles \n
*Mark channels as favourite\n\n


Credits to…\n

newsapi.org\n

https://newsapi.org/

</string>
    <string name="con">Continue</string>
    <string name="sel">SelectAll</string>
    <string name="three_cat">Select Desired Category</string>
    <string name="action_settings">SEARCH</string>
    <string name="text_web_ceo">WEB ANALYTICS</string>
    <string name="text_web_dev">WEB DEVELOPER</string>
    <string name="text_e_commerce">e-Commerce</string>
    <string name="chan">Channels</string>
    <string name="fav_chan">Favourite Channels</string>
    <string name="search_cat">Filter By Categories</string>
    <string name="socialmedia">Social Media</string>
    <string name="email">xyz@gmail.com</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="feed">FeedBack</string>
    <string name="about">About Us</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="searchany">Search Anything...</string>
    <string name="Anything">Search Anything...</string>
    <string name="updated"><![CDATA[Stay Updated With All the Latest News From All Around The World...Search Articles On Trending Topics & Much More...]]></string>
    <string name="tryagain">Try Again</string>
    <string name="notif">Notifications</string>
    <string name="nigt">NightMode</string>
    <string name="lan">Language</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="logout">Logout</string>
    <string name="rateus">Rate Us</string>
    <string name="share">Share</string>
    <string name="pref_previously_started">prev</string>

</resources>
