<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_36dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_channels"
            android:icon="@drawable/ic_stars_white_36dp"
            android:title="@string/chan" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_border_white_36dp"
            android:title="@string/fav_chan" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_white_36dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/navigation_subheader"
            android:title="Would Love to hear...">
            <menu>
                <item
                    android:id="@+id/navigation_sub_item_1"
                    android:icon="@drawable/ic_work_white_36dp"
                    android:title="@string/about" />
                <item
                    android:id="@+id/navigation_sub_item_2"
                    android:icon="@drawable/ic_feedback_white_36dp"
                    android:title="@string/feed" />

            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_action_search"
            android:title="@string/searchany" />

    </group>
</menu>