<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradientnew"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/accent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/three_cat"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"

    >


    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:background="@drawable/buttonstyle"
        android:text="business" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:id="@+id/two"

        android:text="general" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal"
        android:layout_marginTop="20dp"

        >


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:id="@+id/three"

        android:text="health" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:id="@+id/four"

        android:text="science" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal"
        android:layout_marginTop="20dp"

        >


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:id="@+id/five"

        android:text="sports" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle"
        android:text="technology"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:id="@+id/six"

        />


</LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:id="@+id/seven"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="entertainment"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@drawable/buttonstyle"
        android:textStyle="bold"

        android:layout_gravity="center"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >
    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sel"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:id="@+id/select"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/con"
        android:gravity="center"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:id="@+id/continuebtn"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        />


    </RelativeLayout>
    </LinearLayout>
</LinearLayout>